[FIX] #2 Social icons broken in IOS8.

--- a/dev/styles/main/contentElements/socialIcons.less
+++ b/dev/styles/main/contentElements/socialIcons.less
@@ -36,7 +36,7 @@
             border-radius: 50%;
             top: 50%;
             left: 50%;
-            transform: translateY(-50%, -50%);
+            transform: translate(-50%, -50%);
             -webkit-transform: translate(-50%, -50%);   // ios8 safari fix - only works in this order
         }
     }
